# braincheck

./: .gitignore  CHANGELOG.md  README.md  braincheck.py  pyproject.toml  schema.example.yaml
.claude/skills/braincheck/: SKILL.md
.github/workflows/: ci.yml
tests/: test_braincheck.py
tests/fixtures/: schema.yaml
tests/fixtures/vault/: bad-fields.md  known-type-extra-field.md  no-frontmatter.md  unknown-type.md  valid-concept.md
